--- a/style.css
+++ b/style.css
@@ -46,3 +46,31 @@ main {
 .texto {
    color: var(--texto);
 }
+/* Nuevo contenido */
+
+
+.actividad {
+   margin: 20px;
+   width: 80vw;
+   height: auto;
+}
+
+h2 {
+   padding: 20px;
+   width: 80vw;
+   height: 50px;
+   overflow: hidden;
+   box-shadow: 3px 3px 3px rgba(1, 1, 1, 0.5);
+   margin: auto;
+   cursor: pointer;
+}
+
+h2:active {
+   background-color: #141414;
+}
+
+.contenido {
+   width: 100%;
+   height: 90%;
+   display: none;
+} 
