--- a/style.css
+++ b/style.css
@@ -21,8 +21,21 @@ header {
    margin-bottom: 50px;
 }
 
+header p {
+   text-align: center   ;
+}
+
 main {
    margin: 10px;
+}
+
+footer {
+   margin-top: 20px;
+   padding: 20px;
+   background-color: #202020;
+   text-align: center;
+   display: grid;
+   grid-template-columns: 1fr 4fr 4fr;
 }
 
 .codigo {
